--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,45 @@
-plugins {
-    id 'java'
-    id 'application'
-    id 'com.google.protobuf' version '0.9.4'
+buildscript {
+    ext {
+        protobufVersion = '3.23.4'
+        protobufPluginVersion = '0.8.18'
+        grpcVersion = '1.58.0'
+    }
 }
 
-group = 'com.microservices.proto'
-version = '1.0-SNAPSHOT'
+plugins {
+    id 'java-library'
+    id 'com.google.protobuf' version "${protobufPluginVersion}"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.google.protobuf:protobuf-java:4.27.1'
-
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+    implementation "io.grpc:grpc-stub:${grpcVersion}"
+    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
 }
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:4.27.1'
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
+    }
+    generatedFilesBaseDir = "$projectDir/src/generated"
+    clean {
+        delete generatedFilesBaseDir
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
     }
     generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-                java {}
-            }
+        all()*.plugins {
+            grpc {}
         }
     }
 }
-
 sourceSets {
     main {
         proto {
@@ -46,6 +55,5 @@ test {
     useJUnitPlatform()
 }
 
-mainClassName = 'com.microservices.proto.Main'
 
 
